# brain

./: .gitignore  BOLLINGER_OPTIMIZATION_REPORT.md  FINAL_SUMMARY_ABCD.md  Jarvis对比优化报告.md  OPTIMIZATION_SUMMARY.md  README.md  STRATEGIES.md  STRATEGY_LIBRARY_v20.md  STRATEGY_LIBRARY_v30.md  pyproject.toml  tweets_collection_20260410.md  策略库代码文档.md  策略库代码文档.txt
brain/: adaptive_strategy.py  adaptive_strategy_v2.py  market_regime.py  market_regime_v2.py
config/: __init__.py  loader.py  settings.yaml
examples/: accurate_comparison.py  adaptive_strategy_selector.py  backtest_2025_full_year.py  backtest_30strategies_real_data.py  backtest_adaptive_strategy.py  backtest_adaptive_v2_comparison.py  backtest_with_yfinance.py  batch_backtest.py  compare_jarvis_brain.py  demo_backtest.py  dual_ma_backtest.py  final_comparison_report.py  generate_2025_report.py  generate_adaptive_report.py  generate_comparison_report.py  generate_deep_optimization_report.py  generate_optimization_report.py  generate_v2_report.py  genetic_optimizer.py  multi_dataset_validation.py  multi_objective_optimizer.py  optimization_summary_report.py  optimize_30_strategies.py  optimize_all_strategies.py  optimize_bollinger.py  portfolio_optimization.py  portfolio_optimizer.py  test_all_30_strategies.py  test_all_strategies.py  test_new_engine.py  test_new_strategies.py  visualize_results.py  walk_forward_analysis.py
reports/: 30_strategy_optimization_20260410_214703.json  30_strategy_optimization_report.md  adaptive_strategy_report.md  adaptive_strategy_v2_report.md  backtest_2025_000001.SS.json  backtest_2025_ASHR.json  demo_backtest.json  (+10 more)
(+16 files in other folders)
